added config option for lang attribute

--- a/go-blog.conf
+++ b/go-blog.conf
@@ -57,6 +57,10 @@ file_max_upload_size = 100000
 # titles are displayed in the header
 title = example.com
 subtitle = My sample blog
+#currently just used for the primary language of your articles
+#used in html lang attribute
+#https://www.w3.org/International/questions/qa-html-language-declarations.en#langvalues
+language = en
 
 #session configuration for administration
 session_time_to_live = 15m
