log file permission / renaming config values

--- a/go-blog.conf
+++ b/go-blog.conf
@@ -80,5 +80,6 @@ csrf_random_key =
 
 # log configuration
 log_level = Info
-log_path = /var/log/go-blog/go-blog.log 
-log_access_logs = true
+log_file = /var/log/go-blog/go-blog.log 
+log_access = true
+log_access_file = /var/log/go-blog/access.log
