default config values

--- a/go-blog.conf
+++ b/go-blog.conf
@@ -9,15 +9,15 @@ server_port = 4730
 # if you use a reverse proxy which serves the content per SSL you can disable ssl here.
 use_tls = true
 # specify the path to the required certificate and key
-ssl_certificate_file =
-ssl_certificate_key_file =
+ssl_certificate_file = 
+ssl_certificate_key_file = 
 
 #the domain for use in mails
 #form: http(s)://sub.domain.tld
-domain = https://example.com
+domain = 
 
 #database mysql|sqlite
-database_engine = mysql
+database_engine = sqlite
 
 #sqlite config
 sqlite_file =
