config - host instead of address

--- a/go-blog.conf
+++ b/go-blog.conf
@@ -29,9 +29,8 @@ mysql_user =
 mysql_password =
 mysql_database =
 
-
 #mail server server
-mail_smtp_address  =
+mail_smtp_host  =
 mail_smtp_port =
 mail_smtp_user =
 mail_smtp_password =
