allow anonymous send mail

--- a/go-blog.conf
+++ b/go-blog.conf
@@ -34,6 +34,8 @@ mail_smtp_host  =
 mail_smtp_port =
 mail_smtp_user =
 mail_smtp_password =
+#custom helo - if not set hostname will be used
+mail_smtp_helo =
 
 mail_sender_address =
 mail_subject_prefix =
