--- a/go-blog.conf
+++ b/go-blog.conf
@@ -12,25 +12,24 @@ use_tls = true
 ssl_certificate_file =
 ssl_certificate_key_file =
 
-#the domain for use in mails
+# the domain for use in mails
 #form: http(s)://sub.domain.tld
 domain = https://example.com
 
-#database mysql|sqlite
+# database mysql|sqlite
 database_engine = mysql
 
-#sqlite config
+# sqlite config
 sqlite_file =
 
-#mysql connection paramaeters
+# mysql connection paramaeters
 mysql_host = 127.0.0.1
 mysql_port = 3306
 mysql_user =
 mysql_password =
 mysql_database =
 
-
-#mail server server
+# mail server server
 mail_smtp_address  =
 mail_smtp_port =
 mail_smtp_user =
@@ -42,7 +41,7 @@ mail_subject_prefix =
 #the minimum password length
 user_min_password_length = 12
 # the path with name to an optional user interceptor
-user_interceptor_library = 
+user_interceptor_library =
 # defines which field should be used during login
 # Possible values = username|mail
 # Fallback = username
@@ -52,17 +51,17 @@ user_login_method = username
 blog_articles_per_page = 10
 
 file_location = /srv/go-blog/files
-file_max_upload_size = 100000
+file_max_upload_size = 10M
 
-# titles are displayed in the header
+# the title displayed in the header
 title = example.com
-subtitle = My sample blog
+
 #currently just used for the primary language of your articles
 #used in html lang attribute
 #https://www.w3.org/International/questions/qa-html-language-declarations.en#langvalues
 language = en
 
-#session configuration for administration
+# session configuration for administration
 session_time_to_live = 15m
 # check every 5 minutes for timed out sessions
 session_garbage_collection = 5m
@@ -70,16 +69,16 @@ session_cookie_name = go-blog-session
 session_cookie_secure = true
 session_cookie_path = /admin
 
-#csrf cookie options
+# csrf cookie options
 csrf_cookie_name = csrfToken
 csrf_cookie_secure = true
 csrf_cookie_path = /admin
-#a random key will be generated upon first start; see .csrftoken file
-#you can provide your own random key (should be 32 chars long)
+# a random key will be generated upon first start; see .csrftoken file
+# you can provide your own random key (should be 32 chars long)
 csrf_random_key =
 
 # log configuration
 log_level = Info
-log_file = /var/log/go-blog/go-blog.log 
+log_file = /var/log/go-blog/go-blog.log
 log_access = true
 log_access_file = /var/log/go-blog/access.log
