--- a/go-blog.conf
+++ b/go-blog.conf
@@ -15,7 +15,22 @@ use_tls = true
 ssl_certificate_file =
 ssl_certificate_key_file =
 
-domain = https://example.com
+# the title displayed in the header
+application_title = example.com
+
+# currently just used for the primary language of your articles
+# used in html lang attribute
+# Allowed values see https://www.w3.org/International/questions/qa-html-language-declarations.en#langvalues
+application_language = en
+
+# short explanation of the site used in the meta tag "description"
+# In articles the teaser will be in the description tag
+# Maximum length: 320
+application_description =
+
+# the domain for use in mails and rss feeds
+# form: https://sub.domain.tld
+application_domain =
 
 # sqlite config
 sqlite_file =
@@ -25,23 +40,6 @@ blog_articles_per_page = 20
 
 # the number of items in the rss feed
 blog_rss_feed_items = 10
-
-# the title displayed in the header
-blog_title = example.com
-
-# currently just used for the primary language of your articles
-# used in html lang attribute
-# Allowed values see https://www.w3.org/International/questions/qa-html-language-declarations.en#langvalues
-blog_language = en
-
-# short explanation of the site used in the meta tag "description"
-# In articles the teaser will be in the description tag
-# Maximum length: 320
-blog_description =
-
-# the domain for use in mails and rss feeds
-# form: https://sub.domain.tld
-blog_domain =
 
 # mail server server
 mail_smtp_address  =
