--- a/go-blog.conf
+++ b/go-blog.conf
@@ -42,7 +42,7 @@ blog_articles_per_page = 20
 blog_rss_feed_items = 10
 
 # mail server server
-mail_smtp_address  =
+mail_smtp_host  =
 mail_smtp_port =
 mail_smtp_user =
 mail_smtp_password =
