--- a/go-blog.conf
+++ b/go-blog.conf
@@ -54,13 +54,12 @@ mail_subject_prefix =
 user_min_password_length = 12
 
 # the path with name to an optional user interceptor
-user_interceptor_library =
+user_interceptor_plugin =
 
 # defines which field should be used during login
 # Possible values: username|mail
 # Fallback: username
 user_login_method = username
-
 
 # the location in which	files should be placed
 file_location = /srv/go-blog/files
