improve file upload #2

--- a/go-blog.conf
+++ b/go-blog.conf
@@ -64,6 +64,7 @@ user_login_method = username
 # the location in which	files should be placed
 file_location = /srv/go-blog/files
 file_max_upload_size = 10MB
+file_allowed_extensions = jpg, jpeg, png, gif, zip, gz, tar, txt, gpg, asc, pdf
 
 # how long should the session when idle
 session_time_to_live = 15m
