custom robots / favicon / css

--- a/go-blog.conf
+++ b/go-blog.conf
@@ -32,6 +32,17 @@ application_description =
 # form: https://sub.domain.tld
 application_domain =
 
+# file to a custom favicon
+application_favicon = 
+
+# file to a custom robots.txt
+application_robots_txt =
+
+# file to a custom css
+application_custom_css = 
+# overwrite the default css, so it will not be included 
+application_overwrite_default_css = false
+
 # sqlite config
 sqlite_file =
 
