remove open user sessions when changing passwords

--- a/go-blog.conf
+++ b/go-blog.conf
@@ -17,7 +17,7 @@ server_port = 4730
 # sqlite config
 sqlite_file =
 
-# if you use a reverse proxy which serves the content per SSL you can disable tls here
+# if you use a reverse proxy which serves the content encrypted you can disable TLS here
 use_tls = true
 
 # specify the path to the required certificate and key file
