--- a/go-blog.conf
+++ b/go-blog.conf
@@ -57,9 +57,10 @@ application_overwrite_default_css = false
 ########### LOG SETTINGS ###########
 
 # log configuration
-log_level = Info
-log_file = /var/log/go-blog/go-blog.log
-log_access = true
+# log levels: debug|info|warn|error|fatal|panic
+log_level = Error
+log_file = /var/log/go-blog/error.log
+log_access = false
 log_access_file = /var/log/go-blog/access.log
 
 ########### BLOG SETTINGS ###########
