--- a/go-blog.conf
+++ b/go-blog.conf
@@ -41,7 +41,7 @@ application_description =
 
 # the domain for use in mails and rss feeds
 # form: https://sub.domain.tld
-application_domain =
+application_domain = https://localhost
 
 # file to a custom favicon
 application_favicon = 
