--- a/go-blog.conf
+++ b/go-blog.conf
@@ -60,7 +60,7 @@ application_overwrite_default_css = false
 # log levels: debug|info|warn|error|fatal|panic
 log_level = Error
 log_file = /var/log/go-blog/error.log
-log_access = false
+log_access = true
 log_access_file = /var/log/go-blog/access.log
 
 ########### BLOG SETTINGS ###########
